# YAODAQ

./: .clang-format  .clang-tidy  .cmake-format.yml  .cmake-linter.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
.github/: micromamba.yml
.github/micromamba/: docs.yml
.github/workflows/: Docs.yml  Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-MSVC.yml  Windows-MSYS2.yml  pre-commit.yml
apps/: CMakeLists.txt  WebsocketClient.app.cpp  WebsocketServer.app.cpp
cmake/: YAODAQConfig.cmake.in
docs/: CMakeLists.txt  header.tex
include/yaodaq/: Class.hpp  Classification.hpp  ConnectionState.hpp  Exception.hpp  IXWebsocketMessage.hpp  Identifier.hpp  Interrupt.hpp  Key.hpp  LogLevel.hpp  LoggerHandler.hpp  Looper.hpp  Message.hpp  MessageType.hpp  Severity.hpp  Signal.hpp  StatusCode.hpp  Utility.hpp  Version.hpp  WebsocketClient.hpp  WebsocketServer.hpp
src/: CMakeLists.txt
src/yaodaq/: CMakeLists.txt  ConnectionState.cpp  Exception.cpp  IXWebsocketMessage.cpp  Identifier.cpp  Interrupt.cpp  Key.cpp  LoggerHandler.cpp  Looper.cpp  Message.cpp  Version.cpp  WebsocketClient.cpp  WebsocketServer.cpp  YaodaqInfos.hpp.in  YaodaqVersion.hpp.in
tests/: .clang-tidy  CMakeLists.txt  Exception.test.cpp  IXWebsocketMessage.test.cpp  Identifier.test.cpp  LoggerHandler.test.cpp  Message.test.cpp  Version.test.cpp  WebsocketClient.test.cpp  WebsocketClientsServers.test.cpp  WebsocketServer.test.cpp  YaodaqInfos.test.cpp
